--- a/CellphoneComponent/CellphoneComponent/packages.config
+++ b/CellphoneComponent/CellphoneComponent/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.2.0" targetFramework="net451" />
   <package id="MaterialDesignColors" version="1.1.1" targetFramework="net451" />
   <package id="MaterialDesignThemes" version="2.5.0.1205" targetFramework="net451" />
 </packages>
